--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,42 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.2.1.RELEASE' apply false
- 	id "io.spring.dependency-management" version "1.0.8.RELEASE"
-	id "org.flywaydb.flyway" version "6.0.8"
+buildscript {
+	ext {
+		springVersion = "2.2.4.RELEASE"
+		springDependencyMng = "1.0.8.RELEASE"
+		ioReactorVersion = "3.3.0.RELEASE"
+		junitVersion = "5.5.2"
+		flywayVersion = "6.0.8"
+		flyway = [
+			url: "jdbc:postgresql://localhost:5430/wishDream",
+			user: "wishdream",
+			password: "wishdream",
+			driver: "org.postgresql.Driver",
+			schemas: ["public"]
+		]
+		postgresDriver = "42.2.6"
+		rxJava2Driver = "0.2.5"
+	}
 }
 
-ext {
-	flyway = [
-		url: 'jdbc:postgresql://localhost:5430/wishDream',
-		user: 'wishdream',
-		password: 'wishdream',
-		driver: 'org.postgresql.Driver',
-		schemas: ['public']
-	]
+plugins {
+	id "java"
+	id "org.springframework.boot" version "${springVersion}" apply false
+ 	id "io.spring.dependency-management" version "${springDependencyMng}"
+	id "org.flywaydb.flyway" version "${flywayVersion}"
 }
 
 allprojects {
-	apply plugin: 'java'
-	apply plugin: 'idea'
-	apply plugin: 'eclipse'
-	apply plugin: 'maven-publish'
+	apply plugin: "java"
+	apply plugin: "idea"
+	apply plugin: "eclipse"
+	apply plugin: "maven-publish"
 	
-	group 'kr.co.wishDream'
-	version '0.0.1-SNAPSHOT'
+	group "kr.co.wishDream"
+	version "0.0.1-SNAPSHOT"
 	
 	repositories {
 		mavenLocal()
 		mavenCentral()
-		maven {	url 'https://repo.spring.io/milestone' }
+		maven {	url "https://repo.spring.io/milestone" }
 	}
 	
 	configurations {
@@ -42,14 +51,15 @@ allprojects {
 	}
 	
 	dependencies {
-		implementation 'org.postgresql:postgresql:42.2.6'
+		// database
+		implementation "org.postgresql:postgresql:${postgresDriver}"
 	}
 	
-	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+	[compileJava, compileTestJava]*.options*.encoding = "UTF-8"
 }
 
 subprojects {
-	apply plugin: 'org.springframework.boot'
+	apply plugin: "org.springframework.boot"
 	apply plugin: "io.spring.dependency-management"
 	
 	sourceCompatibility = 1.8
@@ -63,54 +73,58 @@ subprojects {
 	
 	dependencies {
 		implementation "org.springframework.boot:spring-boot-starter-webflux"
-		implementation 'org.springframework.boot:spring-boot-starter-integration'
+		implementation "org.springframework.boot:spring-boot-starter-integration"
 		implementation "org.springframework.boot:spring-boot-starter-security"
-		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		developmentOnly "org.springframework.boot:spring-boot-devtools"
 		
-		implementation 'org.springframework.security:spring-security-oauth2-client:5.2.0.RELEASE'
+		implementation "org.springframework.security:spring-security-oauth2-client"
 
-		implementation "io.projectreactor:reactor-core:3.3.0.RELEASE"
-      	testImplementation("io.projectreactor:reactor-test:3.3.0.RELEASE")
+		implementation "com.github.davidmoten:rxjava2-jdbc:${rxJava2Driver}"
+		implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${springVersion}"
 
-		compileOnly 'org.projectlombok:lombok'
-		annotationProcessor 'org.projectlombok:lombok'
-		testCompileOnly 'org.projectlombok:lombok'
-		testAnnotationProcessor 'org.projectlombok:lombok'
+		implementation "io.projectreactor:reactor-core:${ioReactorVersion}"
+      	testImplementation("io.projectreactor:reactor-test:${ioReactorVersion}")
 
-		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testImplementation 'io.projectreactor:reactor-test'
-		
-		// database
-		implementation 'com.github.davidmoten:rxjava2-jdbc:0.2.5'
-		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+		compileOnly "org.projectlombok:lombok"
+		annotationProcessor "org.projectlombok:lombok"
+		testCompileOnly "org.projectlombok:lombok"
+		testAnnotationProcessor "org.projectlombok:lombok"
+
+		testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+		testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
+ 		testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+		testImplementation ("org.springframework.boot:spring-boot-starter-test") {
+			exclude group: 'junit', module: "junit"
+		}
+		testImplementation "io.projectreactor:reactor-test"
+		implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+		implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
 	}
 	
 	sourceSets {
         main {
 	    	java.srcDirs "${project.projectDir}/src/main/java"
-	    	java.outputDir = file('out/java')
-	        output.resourcesDir = file('out/resources')
+	    	java.outputDir = file("out/java")
+	        output.resourcesDir = file("out/resources")
         }
     }
 	
 	task start() {
 		def projectName = project.name
 	
-		dependsOn 'clean'
+		dependsOn "clean"
 		println "####################################################"
 		println	""
 		println "  "+projectName+" project completed the clean task"
 		println	""
-		dependsOn 'build'
+		dependsOn "build"
 		println "####################################################"
 		println	""
 		println "  "+projectName+" project completed the build task"
 		println	""
 		println "####################################################"
 		if (projectName == "wishDream_Core") {
-			dependsOn 'coreJar'
+			dependsOn "coreJar"
 			println	""
 			println "  "+projectName+" project coreJar task"
 			println	""
@@ -125,8 +139,8 @@ flyway {
     password = project.flyway.password
     driver = project.flyway.driver
     schemas = project.flyway.schemas
-    locations = [ 'classpath:/db/migration/postgresql' ] //»ý¼º½ÃÅ³ ¶§
-    encoding = 'UTF-8'
+    locations = [ "classpath:/db/migration/postgresql" ] //ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Å³ ï¿½ï¿½
+    encoding = "UTF-8"
     outOfOrder = false
     validateOnMigrate = true
     cleanDisabled = false
@@ -137,19 +151,19 @@ flywayMigrate {
 	dependsOn build
 }
 
-project(':wishDream_Web') {
-	def coreJarPath = rootProject.files('wishDream_Core/build/libs')[0].toString()
+project(":wishDream_Web") {
+	def coreJarPath = rootProject.files("wishDream_Core/build/libs")[0].toString()
 	bootJar {
 		//launchScript()
-		mainClassName = 'kr.co.wishDream.WishDreamWebApplication'
-		classifier = 'boot'
-		from('out/main') {
-			into 'static'
+		mainClassName = "kr.co.wishDream.WishDreamWebApplication"
+		classifier = "boot"
+		from("out/main") {
+			into "static"
 		}
 	}
 	dependencies {
-		//implementation project(':wishDream_Core')
-	 	implementation fileTree(dir: coreJarPath, include: ['*.jar'])
+		//implementation project(":wishDream_Core")
+	 	implementation fileTree(dir: coreJarPath, include: ["*.jar"])
 	}
 	test {
 	    ignoreFailures = true
@@ -157,14 +171,14 @@ project(':wishDream_Web') {
 	
 }
 
-project(':wishDream_Core') {
+project(":wishDream_Core") {
 	bootJar {
 		enabled = false
 	}
 	
 	task coreJar(type: Jar, dependsOn: configurations.runtimeClasspath) {
-	    archiveClassifier = 'core'
-	    archiveBaseName = 'wishDream_Core'
+	    archiveClassifier = "core"
+	    archiveBaseName = "wishDream_Core"
 		
 		from sourceSets.main.java.outputDir
 		from javadoc.destinationDir
@@ -174,7 +188,7 @@ project(':wishDream_Core') {
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
-	    //from configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) } <- ¿¡·¯ÅÍÁü ¤¾
+	    //from configurations.runtimeClasspath.findAll { it.name.endsWith("jar") }.collect { zipTree(it) } <- ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½
     }
 	
 	test {
@@ -189,11 +203,11 @@ task start() {
     println "project version : ${version}"
 	println "root project path : ${project.rootDir}"
 	
-    dependsOn ':wishDream_Core:start'
-    dependsOn ':wishDream_Web:start'
+    dependsOn ":wishDream_Core:start"
+    dependsOn ":wishDream_Web:start"
 	
-    dependsOn ':flywayValidate'
-    dependsOn ':flywayMigrate'
+    dependsOn ":flywayValidate"
+    dependsOn ":flywayMigrate"
     println "####################################################"
     println	""
     println "            flywayMigrate completed                 "
