--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 		springVersion = "2.2.4.RELEASE"
 		springDependencyMng = "1.0.8.RELEASE"
 		ioReactorVersion = "3.3.0.RELEASE"
+		jwtVersion = "1.1.0.RELEASE"
 		junitVersion = "5.5.2"
 		flywayVersion = "6.0.8"
 		flyway = [
@@ -75,12 +76,16 @@ subprojects {
 		implementation "org.springframework.boot:spring-boot-starter-webflux"
 		implementation "org.springframework.boot:spring-boot-starter-integration"
 		implementation "org.springframework.boot:spring-boot-starter-security"
+		implementation "org.springframework.security.oauth:spring-security-oauth2"
+		implementation "org.springframework.security:spring-security-jwt:${jwtVersion}"
+
 		developmentOnly "org.springframework.boot:spring-boot-devtools"
 		
 		implementation "org.springframework.security:spring-security-oauth2-client"
 
 		implementation "com.github.davidmoten:rxjava2-jdbc:${rxJava2Driver}"
-		implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${springVersion}"
+		implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
+
 
 		implementation "io.projectreactor:reactor-core:${ioReactorVersion}"
       	testImplementation("io.projectreactor:reactor-test:${ioReactorVersion}")
