--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -8,72 +8,74 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.0",
-    "clsx": "^1.0.4",
-    "fibers": "~4.0.1",
-    "jquery": "^3.4.1",
-    "jss-plugin-extend": "^10.0.4",
-    "jss-plugin-global": "^10.0.4",
-    "jss-plugin-nested": "^10.0.4",
-    "jss-plugin-template": "^10.0.4",
+    "axios": "^0.19.2",
+    "clsx": "^1.1.0",
+    "fibers": "~5.0.0",
+    "jquery": "^3.5.1",
+    "jss-plugin-extend": "^10.1.1",
+    "jss-plugin-global": "^10.1.1",
+    "jss-plugin-nested": "^10.1.1",
+    "jss-plugin-template": "^10.1.1",
     "node-gyp": "^6.1.0",
-    "postcss": "^7.0.26",
+    "postcss": "^7.0.29",
     "postcss-preset-env": "^6.7.0",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-cookie": "^4.0.1",
-    "react-dom": "^16.12.0",
-    "react-jss": "^10.0.3",
-    "react-redux": "^7.1.3",
-    "react-stomp": "^4.3.0",
+    "react-dom": "^16.13.1",
+    "react-jss": "^10.1.1",
+    "react-redux": "^7.2.0",
+    "react-stomp": "^5.0.0",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.2.6",
+    "redux-form": "^8.3.5",
     "sugarss": "2.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-proposal-pipeline-operator": "^7.7.7",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/plugin-syntax-jsx": "^7.7.4",
-    "@babel/plugin-transform-arrow-functions": "^7.7.4",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/register": "^7.7.7",
-    "@material-ui/core": "~4.6.1",
-    "@material-ui/icons": "~4.5.1",
-    "@material-ui/styles": "~4.6.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "@babel/plugin-transform-arrow-functions": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/register": "^7.9.0",
+    "@material-ui/core": "~4.9.13",
+    "@material-ui/icons": "~4.9.1",
+    "@material-ui/styles": "~4.9.13",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "core-js": "3.6.2",
-    "css-loader": "^3.4.2",
+    "core-js": "3.6.5",
+    "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "directory-named-webpack-plugin": "^4.0.1",
-    "es-abstract": "^1.16.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.18.0",
+    "es-abstract": "^1.17.5",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "file-loader": "^5.0.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "file-loader": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-eslint": "^6.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.8",
-    "material-ui-popup-state": "^1.5.1",
+    "html-webpack-plugin": "^4.3.0",
+    "material-ui-popup-state": "^1.5.4",
     "media-query-plugin": "^1.3.1",
-    "mini-css-extract-plugin": "~0.8.0",
-    "node-sass": "4.12.0",
+    "mini-css-extract-plugin": "~0.9.0",
+    "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-cli": "^7.1.0",
+    "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
     "postcss-load-config": "^2.1.0",
     "postcss-loader": "^3.0.0",
@@ -81,12 +83,12 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "resolve-url-loader": "^3.1.1",
-    "sass": "1.22.10",
-    "sass-loader": "7.3.1",
+    "sass": "1.26.5",
+    "sass-loader": "8.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11"
   }
 }
