--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -44,9 +44,9 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
-    "@material-ui/core": "~4.9.13",
-    "@material-ui/icons": "~4.9.1",
-    "@material-ui/styles": "~4.9.13",
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
