--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -50,6 +50,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "3.6.5",
@@ -70,9 +71,11 @@
     "gulp-cli": "^2.2.0",
     "gulp-eslint": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jsdom": "^16.2.2",
     "material-ui-popup-state": "^1.5.4",
     "media-query-plugin": "^1.3.1",
     "mini-css-extract-plugin": "~0.9.0",
+    "mocha": "^7.2.0",
     "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-cli": "^7.1.1",
