--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -8,9 +8,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@date-io/date-fns": "^2.6.2",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
+    "core-js-pure": "^3.6.5",
     "date-fns": "^2.14.0",
     "fibers": "~5.0.0",
     "jquery": "^3.5.1",
@@ -46,12 +46,16 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
+    "@babel/runtime-corejs3": "^7.10.2",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
