menu auth 테이블 수정

--- a/wishDream_Web/src/main/resources/application.yml
+++ b/wishDream_Web/src/main/resources/application.yml
@@ -4,6 +4,7 @@ logging:
       hibernate: DEBUG
       springframework:
         data:
+          mongodb: DEBUG
           r2dbc: DEBUG
         web: DEBUG
     root: INFO
