덤프데이터였던 Menu DB 데이터로 변경완료

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ HELP.md
 .settings
 .springBeans
 .sts4-cache
+/wishDream_Core/.externalToolBuilders
+/wishDream_Web/.externalToolBuilders
 
 ### IntelliJ IDEA ###
 .idea
