--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ subprojects {
 
 		testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
 		testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
+ 		testImplementation "org.junit.jupiter:junit-jupiter-vintage-engine:${junitVersion}"
  		testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 		testImplementation ("org.springframework.boot:spring-boot-starter-test") {
 			exclude group: 'junit', module: "junit"
