--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
 		]
 		postgresDriver = "42.2.14"
 		rxJava2Driver = "0.2.7"
+		mongoDriver = "4.0.5"
+		embedMongo = "2.2.0"
 	}
 }
 
@@ -83,10 +85,11 @@ subprojects {
 
 		implementation "com.github.davidmoten:rxjava2-jdbc:${rxJava2Driver}"
 		implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
-
+		implementation group: 'org.mongodb', name: 'mongodb-driver-reactivestreams', version: "${mongoDriver}"
 
 		implementation "io.projectreactor:reactor-core:${ioReactorVersion}"
       	testImplementation("io.projectreactor:reactor-test:${ioReactorVersion}")
+		testImplementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: "${embedMongo}"
 
 		compileOnly "org.projectlombok:lombok"
 		annotationProcessor "org.projectlombok:lombok"
