--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 		springDependencyMng = "1.0.8.RELEASE"
 		ioReactorVersion = "3.3.0.RELEASE"
 		jwtVersion = "1.1.1.RELEASE"
+		kafkaVersion = "1.1.0.RELEASE"
 		junitVersion = "5.6.2"
 		flywayVersion = "6.4.4"
 		flyway = [
@@ -17,6 +18,7 @@ buildscript {
 		rxJava2Driver = "0.2.7"
 		mongoDriver = "4.0.5"
 		embedMongo = "2.2.0"
+		commonCollection4 = "4.4"
 	}
 }
 
@@ -77,6 +79,7 @@ subprojects {
 		implementation "org.springframework.security:spring-security-jwt:${jwtVersion}"
 	    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	    implementation "io.jsonwebtoken:jjwt:0.9.1"
+	    implementation group: 'org.apache.commons', name: 'commons-collections4', version: "${commonCollection4}"
 	
 
 		developmentOnly "org.springframework.boot:spring-boot-devtools"
@@ -86,6 +89,8 @@ subprojects {
 		implementation "com.github.davidmoten:rxjava2-jdbc:${rxJava2Driver}"
 		implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
 		implementation group: 'org.mongodb', name: 'mongodb-driver-reactivestreams', version: "${mongoDriver}"
+
+		implementation "io.projectreactor.kafka:reactor-kafka:${kafkaVersion}"
 
 		implementation "io.projectreactor:reactor-core:${ioReactorVersion}"
       	testImplementation("io.projectreactor:reactor-test:${ioReactorVersion}")
