--- a/wishDream_Web/src/main/resources/application.yml
+++ b/wishDream_Web/src/main/resources/application.yml
@@ -14,6 +14,9 @@ server:
     include-exception: true
     include-stacktrace: never
   port: 8080
+kafka:
+  server: localhost:9099
+  topic: alarm-topic
 spring:
   jackson:
     default-property-inclusion: NON_NULL
