--- a/wishDream_Web/src/main/resources/application.yml
+++ b/wishDream_Web/src/main/resources/application.yml
@@ -17,7 +17,7 @@ server:
     include-stacktrace: never
   port: 8030
 kafka:
-  server: localhost:9092
+  server: 127.0.0.1:9092
   topics: alarm-topic
 spring:
   jackson:
